# clipq

./: .clipq.toml  .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  build.sh  install.sh  test.sh  test_advanced.sh
src/: clipboard.rs  config.rs  daemon.rs  database.rs  main.rs  picker.rs  plugins.rs  web.rs
web/: index.html
